--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/AtiMRTZ/Nexter#readme",
   "devDependencies": {
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "node-sass": "^8.0.0"
   }
 }
