--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A website for finding houses",
   "main": "index.js",
   "scripts": {
-    "test": "node-sass sass/main.scss css/style.css -w"
+    "compile:sass": "node-sass sass/main.scss css/style.css -w"
   },
   "repository": {
     "type": "git",
